# RestFactorialClients

./: .gitignore  CMakeLists.txt  README.md
R/: CMakeLists.txt  pistache_test.R
cpp/: CMakeLists.txt  pistache_test.cpp
csharp/: CMakeLists.txt  Program.cs
golang/: pistache.go
java/: CMakeLists.txt  Main.java  README.md
julia/: CMakeLists.txt  install_dependencies.jl  pistache_test.jl
octave/: pistache_test.m  test.m
python/: CMakeLists.txt  pistache_test.py
rust/: CMakeLists.txt  Cargo.toml
rust/src/: main.rs
